# tap-showpad

./: LICENSE  README.md  meltano.yml  pyproject.toml  schema_inferrer.py  tox.ini
tap_showpad/: client.py  streams.py  tap.py
tap_showpad/schema/: assets.json  channels.json  contacts.json  divisions.json  sharedspaceparticipants.json  sharedspaces.json  users.json
tap_showpad/tests/: __init__.py  test_core.py
