[tool.poetry]
name = "tap-showpad"
version = "0.0.1"
description = "`tap-showpad` is a Singer tap for Showpad, built with the Meltano Singer SDK."
authors = ["Alex Butler"]
keywords = ["ELT", "Showpad"]
license = "Apache 2.0"
include = ["tap_showpad/schema/*.json"]

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
requests = ">=2.28.1"
singer-sdk = { version = ">=0.17.0" }
fs-s3fs = { version = ">=1.1.1", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
tox = ">=3.0.0"
flake8 = ">=3.9.2"
black = ">=22.12.0"
pydocstyle = "^6.2.1"
mypy = "^0.991"
types-requests = "^2.28.11.7"
isort = ">=5.11.4"
genson = "^1.2.2"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.isort]
profile = "black"
multi_line_output = 3     # Vertical Hanging Indent
src_paths = "tap_showpad"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-showpad = 'tap_showpad.tap:TapShowpad.cli'
